--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -11,47 +11,135 @@
         
         #videos {
             margin-top: 10px;
+            max-width: 100%;
+            overflow-x: hidden;
         }
         
         .video-item {
             display: flex;
-            align-items: center;
-            margin: 10px;
-            padding: 5px;
-            border: 1px solid #ccc;
+            flex-direction: column;
+            margin-bottom: 15px;
+            padding: 8px;
+            border: 1px solid #ddd;
             border-radius: 4px;
         }
 
-        .preview {
+        .video-info {
+            margin: 8px 0;
+            word-break: break-all;
+            font-size: 13px;
+        }
+
+        .preview-container {
             width: 120px;
-            height: 67px; /* 16:9 aspect ratio */
-            margin-right: 10px;
-            background: #eee;
+            height: 67px;
+            margin-bottom: 8px;
             display: flex;
             align-items: center;
             justify-content: center;
+            background: #f5f5f5;
         }
 
-        .preview img {
+        .preview-image {
             max-width: 100%;
             max-height: 100%;
+            display: none; /* Initially hidden */
         }
 
-        .video-info {
-            flex-grow: 1;
+        .preview-image.loaded {
+            display: block;
+        }
+
+        .download-group {
+            display: flex;
+            align-items: stretch;
+            height: 28px;
+            width: 100%;
         }
 
         .download-btn {
             background: #0066cc;
             color: white;
             border: none;
-            padding: 5px 10px;
-            border-radius: 4px;
+            padding: 5px 15px;
+            border-radius: 4px 0 0 4px;
             cursor: pointer;
+            flex-grow: 1;
         }
 
-        .download-btn:hover {
+        .save-as-btn {
+            background: #0066cc;
+            color: white;
+            border: none;
+            border-left: 1px solid rgba(255, 255, 255, 0.2);
+            padding: 5px 8px;
+            border-radius: 0 4px 4px 0;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+        }
+
+        .download-btn:hover, .save-as-btn:hover {
             background: #0052a3;
+        }
+
+        /* Save icon using CSS */
+        .save-icon {
+            width: 14px;
+            height: 14px;
+            position: relative;
+            display: inline-block;
+        }
+
+        .save-icon::before {
+            content: '';
+            position: absolute;
+            width: 10px;
+            height: 12px;
+            border: 2px solid white;
+            border-top: none;
+            border-radius: 0 0 2px 2px;
+            top: 2px;
+            left: 0;
+        }
+
+        .save-icon::after {
+            content: '';
+            position: absolute;
+            width: 6px;
+            height: 6px;
+            border: 2px solid white;
+            border-bottom: none;
+            border-left: none;
+            transform: rotate(135deg);
+            top: 0;
+            left: 4px;
+        }
+
+        /* Tooltip styles */
+        [data-tooltip] {
+            position: relative;
+        }
+
+        [data-tooltip]:before {
+            content: attr(data-tooltip);
+            position: absolute;
+            bottom: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 4px 8px;
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+            font-size: 12px;
+            white-space: nowrap;
+            border-radius: 4px;
+            pointer-events: none;
+            opacity: 0;
+            transition: opacity 0.2s;
+        }
+
+        [data-tooltip]:hover:before {
+            opacity: 1;
         }
 
         .error {
@@ -59,10 +147,34 @@
             margin-top: 5px;
             font-size: 12px;
         }
+
+        .loader {
+            width: 24px;
+            height: 24px;
+            border: 3px solid #f3f3f3;
+            border-top: 3px solid #3498db;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin: 10px auto;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Style for the initial loading message */
+        .initial-message {
+            text-align: center;
+            color: #666;
+            margin: 20px 0;
+        }
     </style>
 </head>
 <body>
-    <div id="videos">Searching for videos...</div>
+    <div id="videos">
+        <div class="initial-message">Searching for videos...</div>
+    </div>
     <script src="popup.js"></script>
 </body>
 </html>
