added dark/light theme switcher, faster resolution grabber, grouping by video types in Tabs

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Downloader</title>
+    <title>Universal Video Downloader</title>
     <link rel="stylesheet" href="popup.css">
 </head>
-<body>
+<body class="theme-dark">
     <div class="container">
+        <h1 class="app-title">Universal Video Downloader</h1>
         <div id="videos" class="videos-container">
             <div class="initial-loader">
                 <div class="loader"></div>
