--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -16,6 +16,6 @@
             </div>
         </div>
     </div>
-    <script src="popup.js"></script>
+    <script type="module" src="js/index.js"></script>
 </body>
 </html>
