better theme detection and small UI fix

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -6,7 +6,7 @@
     <title>Universal Video Downloader</title>
     <link rel="stylesheet" href="popup.css">
 </head>
-<body class="theme-dark">
+<body>
     <div class="container">
         <h1 class="app-title">Universal Video Downloader</h1>
         <div id="videos" class="videos-container">
