added preview orig size view on hover (needs fixing)

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -16,6 +16,9 @@
             </div>
         </div>
     </div>
+    <div id="preview-hover" class="preview-hover">
+        <img id="hover-preview-img" alt="Full preview">
+    </div>
     <script type="module" src="js/index.js"></script>
 </body>
 </html>
