--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -10,9 +10,12 @@
     <div class="container">
         <h1 class="app-title">Universal Video Downloader</h1>
         <div id="videos" class="videos-container">
-            <div class="initial-loader">
-                <div class="loader"></div>
-                <span>Searching for videos...</span>
+            <div class="initial-message">
+                <svg viewBox="0 0 24 24" width="48" height="48">
+                    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 14H9V8h2v8zm4 0h-2V8h2v8z"/>
+                </svg>
+                <p>Waiting for video data from the page...</p>
+                <p>Please make sure a video is playing on the current tab.</p>
             </div>
         </div>
     </div>
