relocation: updates structure of popup

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -19,6 +19,6 @@
     <div id="preview-hover" class="preview-hover">
         <img id="hover-preview-img" alt="Full preview">
     </div>
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
