upd: new name MAX Video Downloader

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universal Video Downloader</title>
+    <title>MAX Video Downloader</title>
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="app-title">Universal Video Downloader</h1>
+        <h1 class="app-title">MAX Video Downloader</h1>
         <div id="videos" class="videos-container">
             <div class="initial-message">
                 <p>No videos found on the page.</p>
