--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1 class="app-title">MAX Video Downloader</h1>
-        <div id="videos" class="videos-container">
+    </header>
+    <main class="container">
+        <section id="videos" class="videos-container">
             <div class="initial-message">
                 <p>No videos found on the page.</p>
                 <p>Play a video or Refresh the page.</p>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
     <div id="preview-hover" class="preview-hover">
         <img id="hover-preview-img" alt="Full preview">
     </div>
