--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <header>
-        <h1 class="app-title">MAX Video Downloader</h1>
+        <div class="title-row">
+            <div class="left-buttons-container"></div>
+            <h1 class="app-title">MAX Video Downloader</h1>
+            <div class="right-buttons-container"></div>
+        </div>
     </header>
     <main class="container">
         <section id="videos" class="videos-container">
