upd: styles, divs to sections, new text lines on queues, light theme tabs fix

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="title-row">
+        <section class="title-row">
             <div class="left-buttons-container"></div>
             <h1 class="app-title">MAX Video Downloader</h1>
             <div class="right-buttons-container"></div>
-        </div>
+        </section>
     </header>
     <main class="container">
         <section id="videos" class="videos-container">
