--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <section class="title-row">
+        <section class="heading-row">
             <div class="left-buttons-container"></div>
             <h1 class="app-title">MAX Video Downloader</h1>
             <div class="right-buttons-container"></div>
