refactor: renamed classes, ids, data params, added separate styles for tabs

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -15,7 +15,7 @@
         </section>
     </header>
     <main class="container">
-        <section id="videos" class="videos-container">
+        <section id="videos-list" class="videos-container">
             <div class="initial-message">
                 <p>No videos found on the page.</p>
                 <p>Play a video or Refresh the page.</p>
