new: now downloads are cloned to downloads tab, with 2 keyed storages in storage.local – active and history.
TODO: handlers are broken for cloned items, progress updates are not resetting items in both tabs (only the active, which breaks the sate in another tab), plus I store full elements in history, which is very borken look

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -39,11 +39,19 @@
                 <section class="downloads-container">
                     <div class="active-downloads-section">
                         <h3>Active & Queued</h3>
-                        <div class="active-downloads"></div>
+                        <div class="active-downloads">
+                            <div class="initial-message">
+                                <p>Ongoing downloads will appear here</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="downloads-history-section">
                         <h3>History</h3>
-                        <div class="downloads-history"></div>
+                        <div class="downloads-history">
+                            <div class="initial-message">
+                                <p>You don't have any downloads in history</p>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
