upd: styles consistency improved both in dom and scss

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -38,7 +38,7 @@
             <div class="tab-content" data-tab-id="downloads-tab">
                 <section class="downloads-container">
                     <div class="active-downloads-section">
-                        <h3>Active & Queued</h3>
+                        <h2 class="section-title">Active & Queued</h2>
                         <div class="active-downloads">
                             <div class="initial-message">
                                 <p>Ongoing downloads will appear here</p>
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <div class="downloads-history-section">
-                        <h3>History</h3>
+                        <h2 class="section-title">History</h2>
                         <div class="downloads-history">
                             <div class="initial-message">
                                 <p>You don't have any downloads in history</p>
