upd: unified styling among tabs, section title component is standardized as section-header with 2 modes: static and dynamic

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -38,7 +38,9 @@
             <div class="tab-content" data-tab-id="downloads-tab">
                 <section class="downloads-container">
                     <div class="active-downloads-section">
-                        <h2 class="section-title">Active & Queued</h2>
+                        <div class="section-header collapsible">
+                            <h2 class="section-title">Active & Queued</h2>
+                        </div>
                         <div class="active-downloads">
                             <div class="initial-message">
                                 <p>Ongoing downloads will appear here</p>
@@ -46,7 +48,9 @@
                         </div>
                     </div>
                     <div class="downloads-history-section">
-                        <h2 class="section-title">History</h2>
+                        <div class="section-header static">
+                            <h2 class="section-title">History</h2>
+                        </div>
                         <div class="downloads-history">
                             <div class="initial-message">
                                 <p>You don't have any downloads in history</p>
