new: added counter to history sectino in downloads-tab

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="downloads-history-section">
                         <div class="section-header collapsible">
-                            <h2 class="section-title">History</h2>
+                            <h2 class="section-title">History<span class="section-count"></span></h2>
                         </div>
                         <div class="section-content downloads-history">
                             <div class="initial-message">
