refactor: unify tab and section counter styles and update related HTML classes + tab Settings color upd

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -15,10 +15,10 @@
         </section>
         <nav class="tab-navigation">
             <button class="tab-button active" data-tab-id="videos-tab">
-                Videos<span class="tab-counter"></span>
+                Videos<span class="counter"></span>
             </button>
             <button class="tab-button" data-tab-id="downloads-tab">
-                Downloads<span class="tab-counter"></span>
+                Downloads<span class="counter"></span>
             </button>
             <button class="tab-button" data-tab-id="settings-tab">Settings</button>
         </nav>
@@ -30,7 +30,7 @@
                     <!-- HLS Group -->
                     <div class="video-type-group" data-video-type="hls" style="display: none;">
                         <div class="section-header collapsible">
-                            <h2 class="section-title">HLS Streams<span class="section-count"></span></h2>
+                            <h2 class="section-title">HLS Streams<span class="counter"></span></h2>
                         </div>
                         <div class="section-content">
                             <!-- Video items populated here -->
@@ -40,7 +40,7 @@
                     <!-- DASH Group -->
                     <div class="video-type-group" data-video-type="dash" style="display: none;">
                         <div class="section-header collapsible">
-                            <h2 class="section-title">DASH Streams<span class="section-count"></span></h2>
+                            <h2 class="section-title">DASH Streams<span class="counter"></span></h2>
                         </div>
                         <div class="section-content">
                             <!-- Video items populated here -->
@@ -50,7 +50,7 @@
                     <!-- Direct Video Group -->
                     <div class="video-type-group" data-video-type="direct" style="display: none;">
                         <div class="section-header collapsible">
-                            <h2 class="section-title">Direct Videos<span class="section-count"></span></h2>
+                            <h2 class="section-title">Direct Videos<span class="counter"></span></h2>
                         </div>
                         <div class="section-content">
                             <!-- Video items populated here -->
@@ -60,7 +60,7 @@
                     <!-- Blob Video Group -->
                     <div class="video-type-group" data-video-type="blob" style="display: none;">
                         <div class="section-header collapsible">
-                            <h2 class="section-title">Blob Videos<span class="section-count"></span></h2>
+                            <h2 class="section-title">Blob Videos<span class="counter"></span></h2>
                         </div>
                         <div class="section-content">
                             <!-- Video items populated here -->
@@ -70,7 +70,7 @@
                     <!-- Unknown Video Group -->
                     <div class="video-type-group" data-video-type="unknown" style="display: none;">
                         <div class="section-header collapsible">
-                            <h2 class="section-title">Other Videos<span class="section-count"></span></h2>
+                            <h2 class="section-title">Other Videos<span class="counter"></span></h2>
                         </div>
                         <div class="section-content">
                             <!-- Video items populated here -->
@@ -98,7 +98,7 @@
                     </div>
                     <div class="downloads-history-section">
                         <div class="section-header collapsible">
-                            <h2 class="section-title">History<span class="section-count"></span></h2>
+                            <h2 class="section-title">History<span class="counter"></span></h2>
                         </div>
                         <div class="section-content downloads-history">
                             <div class="initial-message">
