--- a/test/videos.html
+++ b/test/videos.html
@@ -18,7 +18,7 @@
         h1 {
             color: #333;
             text-align: center;
-            margin-bottom: 30px;
+            margin-block-end: 30px;
         }
         .video-section {
             background: white;
@@ -29,10 +29,10 @@
         }
         .video-section h2 {
             color: #666;
-            margin-top: 0;
+            margin-block-start: 0;
             font-size: 16px;
             border-bottom: 1px solid #eee;
-            padding-bottom: 10px;
+            padding-block-end: 10px;
         }
         iframe {
             width: 100%;
@@ -50,7 +50,7 @@
         .url-info {
             font-size: 12px;
             color: #888;
-            margin-top: 10px;
+            margin-block-start: 10px;
             word-break: break-all;
         }
         .status {
