ref: simplified sections init logic for UI

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -31,6 +31,11 @@
                     <div class="video-type-group" data-video-type="hls" style="display: none;">
                         <div class="section-header collapsible">
                             <h2 class="section-title">HLS Streams<span class="counter"></span></h2>
+                            <div class="toggle-icon">
+                                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.70833 3.125C1.31771 2.73438 0.683333 2.73438 0.292708 3.125C-0.0979167 3.51562 -0.0979167 4.15 0.292708 4.54062L4.29271 8.54062C4.68333 8.93125 5.31771 8.93125 5.70833 8.54062L9.70833 4.54062C10.099 4.15 10.099 3.51562 9.70833 3.125C9.31771 2.73438 8.68333 2.73438 8.29271 3.125L5 6.41875L1.70833 3.125Z"/>
+                                </svg>
+                            </div>
                         </div>
                         <div class="section-content">
                             <!-- Video items populated here -->
@@ -41,6 +46,11 @@
                     <div class="video-type-group" data-video-type="dash" style="display: none;">
                         <div class="section-header collapsible">
                             <h2 class="section-title">DASH Streams<span class="counter"></span></h2>
+                            <div class="toggle-icon">
+                                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.70833 3.125C1.31771 2.73438 0.683333 2.73438 0.292708 3.125C-0.0979167 3.51562 -0.0979167 4.15 0.292708 4.54062L4.29271 8.54062C4.68333 8.93125 5.31771 8.93125 5.70833 8.54062L9.70833 4.54062C10.099 4.15 10.099 3.51562 9.70833 3.125C9.31771 2.73438 8.68333 2.73438 8.29271 3.125L5 6.41875L1.70833 3.125Z"/>
+                                </svg>
+                            </div>
                         </div>
                         <div class="section-content">
                             <!-- Video items populated here -->
@@ -51,6 +61,11 @@
                     <div class="video-type-group" data-video-type="direct" style="display: none;">
                         <div class="section-header collapsible">
                             <h2 class="section-title">Direct Videos<span class="counter"></span></h2>
+                            <div class="toggle-icon">
+                                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.70833 3.125C1.31771 2.73438 0.683333 2.73438 0.292708 3.125C-0.0979167 3.51562 -0.0979167 4.15 0.292708 4.54062L4.29271 8.54062C4.68333 8.93125 5.31771 8.93125 5.70833 8.54062L9.70833 4.54062C10.099 4.15 10.099 3.51562 9.70833 3.125C9.31771 2.73438 8.68333 2.73438 8.29271 3.125L5 6.41875L1.70833 3.125Z"/>
+                                </svg>
+                            </div>
                         </div>
                         <div class="section-content">
                             <!-- Video items populated here -->
@@ -61,6 +76,11 @@
                     <div class="video-type-group" data-video-type="unknown" style="display: none;">
                         <div class="section-header collapsible">
                             <h2 class="section-title">Other Videos<span class="counter"></span></h2>
+                            <div class="toggle-icon">
+                                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.70833 3.125C1.31771 2.73438 0.683333 2.73438 0.292708 3.125C-0.0979167 3.51562 -0.0979167 4.15 0.292708 4.54062L4.29271 8.54062C4.68333 8.93125 5.31771 8.93125 5.70833 8.54062L9.70833 4.54062C10.099 4.15 10.099 3.51562 9.70833 3.125C9.31771 2.73438 8.68333 2.73438 8.29271 3.125L5 6.41875L1.70833 3.125Z"/>
+                                </svg>
+                            </div>
                         </div>
                         <div class="section-content">
                             <!-- Video items populated here -->
@@ -79,6 +99,11 @@
                     <div class="active-downloads-section">
                         <div class="section-header collapsible">
                             <h2 class="section-title">Active & Queued</h2>
+                            <div class="toggle-icon">
+                                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.70833 3.125C1.31771 2.73438 0.683333 2.73438 0.292708 3.125C-0.0979167 3.51562 -0.0979167 4.15 0.292708 4.54062L4.29271 8.54062C4.68333 8.93125 5.31771 8.93125 5.70833 8.54062L9.70833 4.54062C10.099 4.15 10.099 3.51562 9.70833 3.125C9.31771 2.73438 8.68333 2.73438 8.29271 3.125L5 6.41875L1.70833 3.125Z"/>
+                                </svg>
+                            </div>
                         </div>
                         <div class="section-content active-downloads">
                             <div class="initial-message">
@@ -89,6 +114,11 @@
                     <div class="downloads-history-section">
                         <div class="section-header collapsible">
                             <h2 class="section-title">History<span class="counter"></span></h2>
+                            <div class="toggle-icon">
+                                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1.70833 3.125C1.31771 2.73438 0.683333 2.73438 0.292708 3.125C-0.0979167 3.51562 -0.0979167 4.15 0.292708 4.54062L4.29271 8.54062C4.68333 8.93125 5.31771 8.93125 5.70833 8.54062L9.70833 4.54062C10.099 4.15 10.099 3.51562 9.70833 3.125C9.31771 2.73438 8.68333 2.73438 8.29271 3.125L5 6.41875L1.70833 3.125Z"/>
+                                </svg>
+                            </div>
                         </div>
                         <div class="section-content downloads-history">
                             <div class="initial-message">
