--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -9,7 +9,14 @@
 <body class="theme-dark">
     <header>
         <section class="heading-row">
-            <div class="left-buttons-container"></div>
+            <div class="left-buttons-container">
+                <button class="clear-cache-button" id="clear-cache-button">
+                    <svg viewBox="0 0 24 24" width="16" height="16">
+                        <path d="M15 16h4v2h-4zm0-8h7v2h-7zm0 4h6v2h-6zM3 18c0 1.1.9 2 2 2h6c1.1 0 2-.9 2-2V8H3v10zm2-8h6v8H5v-8zm5-6H6L5 5H2v2h12V5h-3z"/>
+                    </svg>
+                    <div class="cache-stats">Loading cache stats...</div>
+                </button>
+            </div>
             <h1 class="app-title">MAX Video Downloader</h1>
             <div class="right-buttons-container"></div>
         </section>
