--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -196,13 +196,7 @@
                         <div class="input-group horizontal">
                             <label class="input-label">
                                 Theme
-                                <div class="tooltip-icon" data-tooltip="Choose your preferred theme">
-                                    <svg width="12" height="12" viewBox="0 0 24 24" fill="none">
-                                        <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-                                        <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                        <path d="M12 17h.01" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg>
-                                </div>
+                                <div class="tooltip-icon" data-tooltip="Choose your preferred theme">?</div>
                             </label>
                             <div class="input-container">
                                 <div class="unit-toggle" data-setting="theme" data-unit-toggle="theme">
@@ -218,13 +212,7 @@
 						<div class="input-group horizontal">
 							<label class="input-label">
 								Concurrent Downloads
-								<div class="tooltip-icon" data-tooltip="Maximum number of simultaneous downloads">
-									<svg width="12" height="12" viewBox="0 0 24 24" fill="none">
-										<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-										<path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-										<path d="M12 17h.01" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-									</svg>
-								</div>
+								<div class="tooltip-icon" data-tooltip="Maximum number of simultaneous downloads">?</div>
 							</label>
 							<div class="input-container">
 								<div class="input-constraint-wrapper" data-constraint="1-10">
@@ -244,13 +232,7 @@
 						<div class="input-group horizontal path-input-group">
 							<label class="input-label">
 								Default Save Path
-								<div class="tooltip-icon" data-tooltip="Default folder for saving downloaded videos">
-									<svg width="12" height="12" viewBox="0 0 24 24" fill="none">
-										<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-										<path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-										<path d="M12 17h.01" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-									</svg>
-								</div>
+								<div class="tooltip-icon" data-tooltip="Default folder for saving downloaded videos">?</div>
 							</label>
 							<div class="input-container">
 								<div class="input-constraint-wrapper" data-constraint="Do not choose root folders!">
@@ -268,13 +250,7 @@
 						<div class="input-group horizontal">
 							<label class="input-label">
 								Show Download Notifications
-								<div class="tooltip-icon" data-tooltip="Show system notifications when downloads start and complete">
-									<svg width="12" height="12" viewBox="0 0 24 24" fill="none">
-										<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-										<path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-										<path d="M12 17h.01" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-									</svg>
-								</div>
+								<div class="tooltip-icon" data-tooltip="Show system notifications when downloads start and complete">?</div>
 							</label>
 							<label class="toggle-switch">
 								<input 
@@ -292,13 +268,7 @@
 						<div class="input-group horizontal">
 							<label class="input-label">
 								Min. File Size
-								<div class="tooltip-icon" data-tooltip="Skip video files smaller than this size">
-									<svg width="12" height="12" viewBox="0 0 24 24" fill="none">
-										<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-										<path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-										<path d="M12 17h.01" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-									</svg>
-								</div>
+								<div class="tooltip-icon" data-tooltip="Skip video files smaller than this size">?</div>
 							</label>
 							<div class="input-container">
 								<div class="unit-input-group">
@@ -325,13 +295,7 @@
 						<div class="input-group horizontal">
 							<label class="input-label">
 								Auto-Generate Previews
-								<div class="tooltip-icon" data-tooltip="Automatically generate video thumbnails for detected videos">
-									<svg width="12" height="12" viewBox="0 0 24 24" fill="none">
-										<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-										<path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-										<path d="M12 17h.01" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-									</svg>
-								</div>
+								<div class="tooltip-icon" data-tooltip="Automatically generate video thumbnails for detected videos">?</div>
 							</label>
 							<label class="toggle-switch">
 								<input 
@@ -349,13 +313,7 @@
 						<div class="input-group horizontal">
 							<label class="input-label">
 								Save Downloads in History
-								<div class="tooltip-icon" data-tooltip="Save completed downloads to history for tracking">
-									<svg width="12" height="12" viewBox="0 0 24 24" fill="none">
-										<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-										<path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-										<path d="M12 17h.01" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-									</svg>
-								</div>
+								<div class="tooltip-icon" data-tooltip="Save completed downloads to history for tracking">?</div>
 							</label>
 							<label class="toggle-switch">
 								<input 
@@ -370,13 +328,7 @@
 						<div class="input-group horizontal">
 							<label class="input-label">
 								Max. History Items
-								<div class="tooltip-icon" data-tooltip="Maximum number of download history items to keep">
-									<svg width="12" height="12" viewBox="0 0 24 24" fill="none">
-										<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-										<path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-										<path d="M12 17h.01" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-									</svg>
-								</div>
+								<div class="tooltip-icon" data-tooltip="Maximum number of download history items to keep">?</div>
 							</label>
 							<div class="input-container">
 								<div class="input-constraint-wrapper" data-constraint="0-200">
@@ -396,13 +348,7 @@
 						<div class="input-group horizontal">
 							<label class="input-label">
 								Auto-Remove After (Days)
-								<div class="tooltip-icon" data-tooltip="Automatically remove history items older than this many days">
-									<svg width="12" height="12" viewBox="0 0 24 24" fill="none">
-										<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-										<path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-										<path d="M12 17h.01" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-									</svg>
-								</div>
+								<div class="tooltip-icon" data-tooltip="Automatically remove history items older than this many days">?</div>
 							</label>
 							<div class="input-container">
 								<div class="input-constraint-wrapper" data-constraint="1-365">
