upd: - styles are updated for the whole extension (minor fixes)
fix:
- now we properly handle body expanded state and dd (both dropdown and dl-btn-menu) open states are unified

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -19,9 +19,7 @@
         </nav>
 		<div class="controls">
 			<button class="clear-cache-button" id="clear-cache-button">
-				<svg viewBox="0 0 24 24" width="16" height="16">
-					<path d="M15 16h4v2h-4zm0-8h7v2h-7zm0 4h6v2h-6zM3 18c0 1.1.9 2 2 2h6c1.1 0 2-.9 2-2V8H3v10zm2-8h6v8H5v-8zm5-6H6L5 5H2v2h12V5h-3z"/>
-				</svg>
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-trash2 lucide-trash-2 w-4 h-4" aria-hidden="true"><path d="M3 6h18"></path><path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"></path><path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"></path><line x1="10" x2="10" y1="11" y2="17"></line><line x1="14" x2="14" y1="11" y2="17"></line></svg>
 			</button>
 		</div>
     </header>
