--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -28,6 +28,20 @@
 							<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-4 h-4"><rect x="2" y="3" width="12" height="1.5" rx="0.75" fill="currentColor"></rect><rect x="4" y="7" width="8" height="1.5" rx="0.75" fill="currentColor"></rect><rect x="6" y="11" width="4" height="1.5" rx="0.75" fill="currentColor"></rect></svg>
 						</button>
 						<div class="filter-options" id="filter-options">
+							<!-- Sorting Options -->
+							<div class="sort-controls">
+								<button class="sort-btn active descending" id="sort-detection-time" data-sort="detection-time">
+									Detected at
+								</button>
+								<button class="sort-btn" id="sort-duration" data-sort="duration">
+									Duration
+								</button>
+								<button class="sort-btn" id="sort-title" data-sort="title">
+									Title
+								</button>
+							</div>
+							<div class="filter-options-separator"></div>
+							
 							<label class="filter-option">
 								<input type="checkbox" value="hls" checked>
 								<span>Show HLS</span>
