upd: now initial message is used with different text for cases when search didn't match anything

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -136,8 +136,14 @@
                     </div>
                     
                     <div class="initial-message">
-                        <p>No videos found on the page.</p>
-                        <p>Play a video or Refresh the page.</p>
+                        <div class="no-videos-message">
+                            <p>No videos found on the page.</p>
+                            <p>Play a video or Refresh the page.</p>
+                        </div>
+                        <div class="no-matches-message">
+                            <p>No matches found.</p>
+                            <p>Try different search terms.</p>
+                        </div>
                     </div>
                 </section>
             </div>
