new: now we have button in settings to clear all history entries (at the very bottom)

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -413,6 +413,11 @@
 								</div>
 							</div>
 						</div>
+						<div class="input-group horizontal">
+							<div class="input-group">
+								<button id="clear-history-button" class="clear-history-button">Clear Download History</button>
+							</div>
+						</div>
 					</div>
 				</section>
             </div>
