mid-new: implemented coapp checker + toasts in SESSION storage

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -191,7 +191,7 @@
 					<div class="settings-section">
 						<div class="status-info">
 							<div class="status-line">
-								<span class="status-label">Status:</span>
+								<span class="status-label">CoApp:</span>
 								<div class="status-value">
 									<div class="status-dot disconnected" id="connection-status-dot"></div>
 									<span id="connection-status-text">Checking...</span>
@@ -344,7 +344,7 @@
 						<div class="input-group horizontal">
 							<label class="input-label">
 								Auto-Generate Previews
-								<div class="tooltip-icon" data-tooltip="Automatically generate video thumbnails for detected videos">?</div>
+								<div class="tooltip-icon" data-tooltip="Automatically generate video thumbnails for detected videos. Requires CoApp!">?</div>
 							</label>
 							<label class="toggle-switch">
 								<input 
