fix: style consistency and improvements

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -136,11 +136,11 @@
                     </div>
                     
                     <div class="initial-message">
-                        <div class="no-videos-message">
-                            <p>No videos found on the page.</p>
-                            <p>Play a video or Refresh the page.</p>
-                        </div>
-                        <div class="no-matches-message">
+						<div class="content no-videos-message">
+							<p>No videos found on the page.</p>
+							<p>Play a video or Refresh the page.</p>
+						</div>
+                        <div class="content no-matches-message">
                             <p>No matches found.</p>
                             <p>Try different search terms.</p>
                         </div>
@@ -161,7 +161,9 @@
                         </div>
                         <div class="section-content active-downloads">
                             <div class="initial-message">
-                                <p>Ongoing downloads will appear here</p>
+								<div class="content">
+                                	<p>No active downloads.</p>
+								</div>
                             </div>
                         </div>
                     </div>
@@ -176,8 +178,10 @@
                         </div>
                         <div class="section-content downloads-history">
                             <div class="initial-message">
-                                <p>You don't have any downloads in history</p>
-                            </div>
+								<div class="content"></div>
+                                	<p>History is empty.</p>
+                            	</div>
+							</div>
                         </div>
                     </div>
                 </section>
